# fadegor05-aiogram-template

./: .dockerignore  .env.dist  .gitignore  docker-compose.yaml  pyproject.toml  run.py
app/: database.py
app/core/: config.py
app/crud/: user.py
app/dialogs/: __init__.py
app/dialogs/start/: __init__.py  callbacks.py  getters.py  keyboards.py  states.py  windows.py
app/handlers/start/: start.py
app/models/: user.py
